# TecFlix

./: .~lock.movie_metadata.csv#  CMakeLists.txt  README.md  main.cpp  movie_metadata.csv
GUI/: Box.cpp  Box.h  Button.h  CSVparser.h  Normal.cpp  Normal.h  Page.cpp  Page.h  ScrollArea.cpp  ScrollArea.h  StratWindow.cpp  StratWindow.h
NoP/: NoPag.cpp  NoPag.h
